modified UI based pending list

--- a/src/app/features/cart/_components/price-summary/price-summary.component.html
+++ b/src/app/features/cart/_components/price-summary/price-summary.component.html
@@ -7,7 +7,7 @@
   </div>
 
   <div class="summary-row">
-    <span>Tax Amount</span>
+    <span>Tax Amount(included in MRP)</span>
     <span>₹{{ cart?.taxAmount }}</span>
   </div>
 
