--- a/src/app/features/settings/_components/order-card/order-card.component.html
+++ b/src/app/features/settings/_components/order-card/order-card.component.html
@@ -63,6 +63,7 @@
       <div class="product-details">
         <div class="product-name">{{ product.name }}</div>
         <div class="product-meta">SKU: {{ product.sku }}</div>
+        <div class="product-meta">Quantity: {{ product.qty }}</div>
       </div>
 
       <div class="product-actions">
